Week 06 complete and small updates to weeks 4, 5

--- a/week_04/week_04.ipynb
+++ b/week_04/week_04.ipynb
@@ -1982,7 +1982,7 @@
     "* Use AUC to evaluate the model on validation\n",
     "\n",
     "\n",
-    "How large is standard devidation of the AUC scores across different folds?\n",
+    "How large is standard devidation of the AUC scores a different folds?\n",
     "\n",
     "- **0.003**\n",
     "- 0.014\n",
