--- a/week_05/week_05.ipynb
+++ b/week_05/week_05.ipynb
@@ -57,7 +57,6 @@
    ],
    "source": [
     "import jupyter_black\n",
-    "\n",
     "jupyter_black.load()"
    ]
   },
@@ -629,6 +628,27 @@
     "▶ python q6_test.py\n",
     "{'churn': True, 'churn_probability': 0.7692649226628628}\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd5cc81-9590-4b7e-8192-ec18eae83f6a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Submit the results\n",
+    "\n",
+    "* Submit your results here: https://forms.gle/jU2we8f9WeLgX3qa6\n",
+    "* You can submit your solution multiple times. In this case, only the last submission will be used \n",
+    "* If your answer doesn't match options exactly, select the closest one\n",
+    "\n",
+    "\n",
+    "## Deadline\n",
+    "\n",
+    "The deadline for submitting is **10 October 2022 (Monday), 23:00 CEST (Berlin time)**. \n",
+    "\n",
+    "After that, the form will be closed."
    ]
   },
   {
