--- a/week_09/week-09.ipynb
+++ b/week_09/week-09.ipynb
@@ -546,7 +546,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "\n",
+    "## Publishing it to AWS\n",
+    "\n",
+    "Now you can deploy your model to AWS!\n",
+    "\n",
+    "* Publish your image to ECR\n",
+    "* Create a lambda function in AWS, use the ECR image\n",
+    "* Give it more RAM and increase the timeout \n",
+    "* Test it\n",
+    "* Expose the lambda function using API Gateway\n",
+    "\n",
+    "This is optional and not graded.\n",
+    "\n",
+    "\n",
+    "## Publishing to Docker hub\n",
+    "\n",
+    "This is just for reference, this is how we published our image to Docker hub:\n",
+    "\n",
+    "```bash\n",
+    "docker build -t zoomcamp-dino-dragon-lambda .\n",
+    "docker tag zoomcamp-dino-dragon-lambda:latest svizor42/zoomcamp-dino-dragon-lambda:v2\n",
+    "docker push svizor42/zoomcamp-dino-dragon-lambda:v2\n",
+    "```\n",
+    "\n",
+    "\n",
+    "## Submit the results\n",
+    "\n",
+    "* Submit your results here: https://forms.gle/Pnx563ELg9jgjxHX6\n",
+    "* You can submit your solution multiple times. In this case, only the last submission will be used \n",
+    "* If your answer doesn't match options exactly, select the closest one\n",
+    "\n",
+    "\n",
+    "## Deadline\n",
+    "\n",
+    "The deadline for submitting is **28 November 2022 (Monday), 23:00 CEST (Berlin time)**. \n",
+    "\n",
+    "After that, the form will be closed."
+   ]
   },
   {
    "cell_type": "markdown",
